--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Scon 空間</title>
-    <link rel="shortcut icon" href="src/assets/images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>Scon 空間</title>
+  <meta name=" description" content="Schon 當代空間的家具工廠為義大利頂級家具品牌認可的工藝品質，目前外銷各大國家如日本、比利時、美國、新加坡、等居家、精品店以及國際連鎖五星級飯店御用之品質。"/>
+  <meta property="og:image" content="https://github.com/TsaiChihWei/vue-furniture-shopping-website/blob/main/src/assets/images/sofa/chair-4890690_960_720.png?raw=true"/>
+  <link rel="icon"
+    href="https://raw.githubusercontent.com/TsaiChihWei/vue-furniture-shopping-website/main/src/assets/images/favicon.ico"
+    type="image/x-icon">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+    integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@200&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
 </html>
